-*- outline -*-

* Summary of Changes for Proof General 3.2 from 3.1

----- NB: this is a pre-release of PG 3.2.  Bugs likely, please report ------ 



** Generic Changes

*** Added proof-next-error function, bound to C-c `

  When the proof assistant batch loads files "in the background"
  rather than incrementally via script management, error messages
  may appear in the response buffer with file/line numbers.
  Proof General can now parse these messages to jump to the
  location of the error.

*** New more efficient and generalised parsing functions
 
  Also works around crash bug in xemacs-21.1.7/SuSE.
  Fix to previous function (used by FSF Emacs) by Markus Wenzel.
  XEmacs uses new functions which have slightly different 
  behaviour.  If this is problematical, please report, and
  force the use of the old function by writing:

     (defalias 'proof-segment-up-to 'proof-segment-up-to-old)
 
  in your .emacs file. (Warning: only during pre-release!)

*** Makefile has new target "scripts" to adjust paths in bash/perl scripts

*** Bug fix: "next" button enabled more often.  Solaris turns off enablers.

*** Bug fix: first line ignored problem fixed for Coq and others.
 
  To fix this properly, we have added `proof-shell-pre-sync-init-cmd'
  for provers that need initialization before synchronization can be
  secured.  [Developers note: LEGO needs to wait for second prompt
  before sync, whereas Isabelle managed to sync on first prompt.  
  Coq was best, with sync set before startup, using a command line option.
  That is the recommended route for new proof assistants.]

*** Bug fix: script management is now more robust against C-x C-v, C-x C-w

  Please let me know of any cases where this fails.  

*** Menu reorganization, including new proof assistant specific menus.  

  Specific menus added for Coq, LEGO, Isabelle.

*** Favourites: user-defined commands added proof assistant specific menu

*** Proof assistant specific keymap added
